themes/custom/mat/sass/components/paragraphs/_paragraph--basic-page.scss
// ========================================
//
// @file _paragraph--basic-page.scss
// All Basic page, News Article paragraphs
// ========================================

.paragraph--type--landing-page-rich-text,
.paragraph--type--landing-page-image,
.paragraph--type--basic-page-image-and-text,
.paragraph--type--basic-page-video,
.paragraph--type--basic-page-quote,
.paragraph--type--basic-page-iframe,
.paragraph--type--landing-page-form {
  margin-bottom: 4rem;

  &.border-line {
    padding-bottom: 4rem;
    border-bottom: 2px solid $hr-border-color-transparent;
  }
}

.paragraph--type--landing-page-image,
.paragraph--type--basic-page-image-and-text,
.paragraph--type--basic-page-video {
  .field--name-field-image-text {
    padding: 10px 0;
    color: $gray-darker;
    font-family:$font-flama-semibold;
    @include font-size(1.5);
    line-height: 1.2;
  }
}

// Paragraph Rich text
.paragraph--type--landing-page-rich-text,
.paragraph--type--basic-page-image-and-text {
  // Lists
  ul:not(.contextual-links),
  ol {
    @extend %list-base;
  }

  ul:not(.contextual-links) {
    @extend %list-ul;
  }

  ol {
    @extend %list-ol;
  }
}

// Paragraph Image
.paragraph--type--landing-page-image {
  img {
    margin: 0 auto;
  }
}

// Paragraph Image with Text
.paragraph--type--basic-page-image-and-text {
  @media (min-width: $screen-sm-min) {
    display: flex;
  }

  @media (max-width: $screen-sm-max) {
    display: flex;
    flex-direction: column;
  }

  h4 {
    padding-top: .2rem !important;
  }

  .field--name-field-text {
    @media (max-width: $screen-sm-max) {
      order: 3;
    }
  }

  .image {
    margin-bottom: 4.7rem;

    @media (max-width: $screen-sm-max) {
      order: 2;
    }

    @media (min-width: $screen-sm-min) {
      flex-shrink: 0;
      max-width: 200px;
      margin: 0 1rem 0 3rem;
    }

    img {
      margin: 0 auto;
      @media (max-width: $screen-sm-max) {
        max-width: 315px;
      }

    }

    .field--name-field-image-text {
      margin: 0;
    }
  }

  &.left {
    @media (min-width: $screen-sm-min) {
      justify-content: space-between;
    }

    .image {
      @media (min-width: $screen-sm-min) {
        order: 2;
        .field--name-field-image-text {
          margin: 0;
        }
      }
    }
  }

  &.right {
    .image {
      @media (min-width: $screen-sm-min) {
        order: 1;
        margin: 0 3rem 0 1rem;
      }
    }

    .field--name-field-text {
      @media (min-width: $screen-sm-min) {
        order: 2;
      }
    }
  }

}

// Paragraph Quote
.paragraph--type--basic-page-quote {
  blockquote {
    margin-bottom: 0!important;
  }

  .quote--footer {
    padding: 3.8rem 0 0 4rem;
    @include font-size(1.4);
    line-height: 2.2;
    font-weight: 500;
    letter-spacing: .13em;
    text-transform: uppercase;
    color: $blue-dark;

    @media (min-width: $screen-sm-min) {
      display: flex;
      padding: 3.5rem 8rem 0 4rem;
    }

    .quote--author {
      @media (min-width: $screen-sm-min) {
        //min-width: 18rem;
        padding-right: 1rem;
      }
    }
  }
}

// Paragraph Iframe
.paragraph--type--basic-page-iframe {
  .field--name-field-iframe {
      position: relative;
      width: 100%;
      //padding-bottom: 56.25%;
      overflow: auto;
      -webkit-overflow-scrolling: touch;
      //height: 0;
  }

  iframe {
      //position: absolute;
      //top: 0;
      //left: 0;
      width: 1px;
      min-width: 100%;
      //height: 100%;
      //max-height: 100%;
  }
}

.paragraph--type--landing-page-form {

  .landing-page-form--intro {
    margin-bottom: 4rem;
    display: flex;
    flex-wrap: wrap;

    .landing-page-form--intro--headline {
      width: 100%;
    }

    .field--name-field-form-intro-text {
      @media (min-width: $screen-sm-min) {
        width: calc(100% - 310px);
        padding: 0 2rem;
      }
    }

    .field--name-field-intro-image {
      width: 310px;
      max-width: 100%;
      @media (max-width: $screen-sm) {
         padding-bottom: 0.9em;
         width: 450px;
         margin: 0 auto;
      }
      @media (max-width: $screen-xs) {
        width: auto;
      }
    }
  }

}

